<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ocproducts.composr.sdk.CMS_ContactActivity" >

    <EditText
        android:id="@+id/txtSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/contact_subject_hint" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtSubject"
        android:layout_below="@+id/txtSubject"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/contact_email_hint" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/contact_message_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:text="@string/contact_saveBtn_text" />

</RelativeLayout>
